# transactions_api_realization

./: .env  .env-example  .gitignore  config.py  methods.py  pyproject.toml  settings.py
