[tool.poetry]
name = "transactions-api-realization"
version = "0.1.0"
description = "Realization of Transactions API methods"
authors = ["nick <assertive_alex@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
